--- a/css/containers.css
+++ b/css/containers.css
@@ -1,5 +1,5 @@
 .root {
-  background: url("/images/background.jpg");
+  background: url("../images/background.jpg");
   background-position: center;
   background-size: cover;
   object-fit: fill;
